--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -67,6 +67,14 @@
             android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
             android:layout_marginBottom="16dp"/>
 
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/settings_page_note"
+            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
+            android:layout_marginBottom="16dp"
+            android:textAlignment="center"/>
+
     </LinearLayout>
 
 </ScrollView>
