--- a/app/src/main/res/layout/dialog_edit_transaction.xml
+++ b/app/src/main/res/layout/dialog_edit_transaction.xml
@@ -34,22 +34,23 @@
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:textColor="@color/white"
-            android:dropDownHeight="200dp" />
+            android:dropDownHeight="300dp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_marginTop="12dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/edit_dialog_friend_split">
+        android:hint="@string/edit_dialog_friend_split"
+        app:placeholderText="0">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/inputFriendSplit"
             android:inputType="numberDecimal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <!-- 50:50 + Clear -->
+    <!-- 50:50 + Clear + Full -->
     <LinearLayout
         android:layout_marginTop="4dp"
         android:orientation="horizontal"
@@ -70,6 +71,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/edit_dialog_clear_split"
+            android:layout_marginStart="8dp" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/fullSplitButton"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/edit_dialog_full_split"
             android:layout_marginStart="8dp" />
     </LinearLayout>
 
