--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -66,13 +66,36 @@
             </LinearLayout>
 
             <!-- Line 3: Notes -->
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/transactionNotes"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textStyle="italic"
-                android:textSize="14sp"
-                android:layout_marginTop="4dp"/>
+                android:orientation="horizontal"
+                android:layout_marginTop="4dp">
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/transactionNotes"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:textStyle="italic|bold"
+                    android:textSize="14sp"
+                    android:layout_weight="2" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/transactionAccount"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textStyle="italic|bold"
+                    android:textSize="14sp"
+                    android:gravity="end" />
+            </LinearLayout>
+<!--            <com.google.android.material.textview.MaterialTextView-->
+<!--                android:id="@+id/transactionNotes"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:textStyle="italic"-->
+<!--                android:textSize="14sp"-->
+<!--                android:layout_marginTop="4dp"/>-->
         </LinearLayout>
 
         <!-- Edit button aligned right -->
