--- a/app/src/main/res/layout/dialog_edit_transaction.xml
+++ b/app/src/main/res/layout/dialog_edit_transaction.xml
@@ -101,31 +101,36 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center">
+        android:gravity="center"
+        android:weightSum="3">
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/deleteButton"
             style="@style/Widget.Material3.Button.ElevatedButton"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="@string/edit_dialog_delete_button"
             android:backgroundTint="@color/md_theme_error"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white"
+            android:layout_marginEnd="8dp" /> <!-- margin on the right -->
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/cancelButton"
             style="@style/Widget.Material3.Button.OutlinedButton"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="@string/edit_dialog_cancel_button" />
+            android:text="@string/edit_dialog_cancel_button"
+            android:layout_marginEnd="8dp" /> <!-- margin on the right -->
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/saveButton"
             style="@style/Widget.Material3.Button"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="@string/edit_dialog_save_button"
-            android:layout_marginStart="12dp" />
+            android:text="@string/edit_dialog_save_button" />
 
     </LinearLayout>
 
