--- a/app/src/main/res/layout/dialog_edit_transaction.xml
+++ b/app/src/main/res/layout/dialog_edit_transaction.xml
@@ -94,7 +94,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="Transaction Method"
+            android:hint="Method"
             style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
             app:endIconDrawable="@drawable/ic_drop_down">
 
