--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -78,6 +78,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:padding="10dp"
                 android:text="@string/server_status_unknown"
                 android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                 android:gravity="center"
@@ -89,6 +90,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:padding="10dp"
                 android:text="@string/auth_status_unknown"
                 android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                 android:gravity="center" />
@@ -112,6 +114,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/show_failure_notifications_toggle_text"
+            android:checked="true"
+            android:layout_marginBottom="16dp"
+            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
+            app:useMaterialThemeColors="true" />
+
+        <com.google.android.material.materialswitch.MaterialSwitch
+            android:id="@+id/switchShowErrorNotification"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/show_error_notifications_toggle_text"
             android:checked="true"
             android:layout_marginBottom="16dp"
             android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
